--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   logger: ^1.1.0
   get_it: ^7.2.0
   json_annotation: ^4.1.0
+  retrofit: ^2.0.1
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -33,6 +35,7 @@ dev_dependencies:
   flutter_lints: ^1.0.4
   build_runner: ^2.0.0
   json_serializable: ^5.0.0
+  retrofit_generator: any
 
 
 # For information on the generic Dart part of this file, see the
